Yet another batch of link fixes including content retrival after too greedy regex

--- a/docs/salesforce/marketing-cloud-engagement/config/appexchange-solutions.mdx
+++ b/docs/salesforce/marketing-cloud-engagement/config/appexchange-solutions.mdx
@@ -145,7 +145,7 @@ __4. Custom Solution__
 
 There are two base options for the drag and drop custom solution approach.
 
-First - generator that modifies predefined segments. It's relatively simple to build, but it allows you to make only minor adaptations of the templated query, mostly on filtering (/docs/salesforce/marketing-cloud-engagement/sql/sql-where.mdx). Very limited and requires hard coding for each new segment template. Not good enough and hard to maintain.
+First - generator that modifies predefined segments. It's relatively simple to build, but it allows you to make only minor adaptations of the templated query, mostly on filtering ([SQL WHERE](/docs/salesforce/marketing-cloud-engagement/sql/sql-where.mdx)). Very limited and requires hard coding for each new segment template. Not good enough and hard to maintain.
 
 Second - fully-fledged visual wrapper over SQL queries. Full power with a drag and drop interface. Sounds like a dream? Correct. Such solution requires a lot of work and testing. The cost would skyrocket well above (spoiler alert) what is available in the paid section of AppExchange. Not worth it.
 
