--- a/docs/salesforce/marketing-cloud-engagement/config/mobile-connect-data-views.mdx
+++ b/docs/salesforce/marketing-cloud-engagement/config/mobile-connect-data-views.mdx
@@ -581,7 +581,7 @@ When working with `_SMSMessageTracking` Data View:
     - `SendSplitID`, `SendSegmentID`, `SendGroupID`, `SendPersonID` are populated only when SMS is sent to Data Extension as Audience.
     - `ConversationID` is populated only when a conversation is created with a MO user using AMPScript [`CreateSMSConversation`](https://developer.salesforce.com/docs/atlas.en-us.noversion.mc-programmatic-content.meta/mc-programmatic-content/CreateSmsConversation.htm).
 7. `Unsub`, `OptIn`, `OptOut` are currently not populated at all. You should pull that data from [`_SMSSubscriptionLog`](#_smssubscriptionlog).
-8. `JBDefinitionID` and `JBActivityID` let you cleanly match SMS data to [`Journey`](/docs/salesforce/marketing-cloud-engagement/sql/sql-join.mdx) using `Name` field: `ON smsTracking.Name = journeyActivity.ActivityName`.
+8. `JBDefinitionID` and `JBActivityID` let you cleanly match SMS data to [`Journey`](/docs/salesforce/marketing-cloud-engagement/config/system-data-views/#_journey) and [`_JourneyActivity`](/docs/salesforce/marketing-cloud-engagement/config/system-data-views/#_journeyactivity) Data Views using `VersionID` and `ActivityID` respectively. However, it won't work for old (created before October 2020) SMS Activities - for those you can make a [`JOIN`](/docs/salesforce/marketing-cloud-engagement/sql/sql-join.mdx) using `Name` field: `ON smsTracking.Name = journeyActivity.ActivityName`.
 9. `SMSStandardStatusCodeId` and `Description` are great for understanding your SMS send's current status.
 10. `SMSJobID` and `SMSBatchID` are the only way to connect _SMSMessageTracking Data View to [SMS Send Log](/docs/salesforce/marketing-cloud-engagement/sql/sql-join.mdx) `ON smsTracking.SubscriberID = sendLog.SubID AND smsTracking.SMSJobID = sendLog.SMSJobID AND smsTracking.SMSBatchID = sendLog.BatchID`.
 
