--- a/docs/salesforce/marketing-cloud-engagement/sql/snippets/sql-debugging-email-sends.mdx
+++ b/docs/salesforce/marketing-cloud-engagement/sql/snippets/sql-debugging-email-sends.mdx
@@ -115,7 +115,7 @@ If you want to focus on a single Journey, you can limit your outcomes by adding 
 
 If you are interested only in bounces and do not need any other sends, add `b.IsUnique = 1` to the [`WHERE` statement](/docs/salesforce/marketing-cloud-engagement/sql/sql-where.mdx#logical-operators).
 
-You can use the same approach to output only opens or clicks by changing the prefix from `b` to the [alias](/docs/salesforce/marketing-cloud-engagement/config/system-data-views.mdx).
+You can use the same approach to output only opens or clicks by changing the prefix from `b` to the [alias](/docs/salesforce/marketing-cloud-engagement/sql/sql-join/#table-name-prefix) representing the needed [System Data View](/docs/salesforce/marketing-cloud-engagement/config/system-data-views.mdx).
 
 ## Email Send Debugging Step-by-Step
 
