--- a/docs/salesforce/marketing-cloud-engagement/sql/sql-numeric-functions.mdx
+++ b/docs/salesforce/marketing-cloud-engagement/sql/sql-numeric-functions.mdx
@@ -107,7 +107,7 @@ The `FORMAT` works only with datetime and numeric values, outputs a string and r
 2. Format specifier to be applied
 3. Optionally - ISO culture code
 
-It is a perfect tool to manipulate any numbers (/docs/salesforce/marketing-cloud-engagement/sql/sql-conversion-functions.mdx)) available in your Data Extensions.
+It is a perfect tool to manipulate any numbers (or numeric strings with the help of [conversion](/docs/salesforce/marketing-cloud-engagement/sql/sql-conversion-functions.mdx)) available in your Data Extensions.
 
 ### Standard number formats
 
