--- a/docs/salesforce/marketing-cloud-engagement/sql/sql-string-functions.mdx
+++ b/docs/salesforce/marketing-cloud-engagement/sql/sql-string-functions.mdx
@@ -89,7 +89,7 @@ The above query checks whether there is a space within the `InstitutionName` val
 
 ## PATINDEX
 
-While [`CHARINDEX`](/docs/salesforce/marketing-cloud-engagement/sql/sql-like.mdx) operator:
+While [`CHARINDEX`](#charindex) is great for searching the position of a specific string in a value, `PATINDEX` gives you even more power by supporting the wildcard patterns used with [`LIKE`](/docs/salesforce/marketing-cloud-engagement/sql/sql-like.mdx) operator:
 
 Wildcards & Operators | Description
 -- | --
