--- a/docs/salesforce/marketing-cloud-engagement/sql/sql-where.mdx
+++ b/docs/salesforce/marketing-cloud-engagement/sql/sql-where.mdx
@@ -66,7 +66,7 @@ FROM _Subscribers
 WHERE CONVERT(DATE, DateJoined) >= DATEADD(MONTH, -1, CONVERT(DATE, GETUTCDATE()))
 ```
 
-With dates, you will frequently want to use a bit more complex structure for the comparison to work correctly. In this case, we are converting the `DateJoined` value to a simple date (/docs/salesforce/marketing-cloud-engagement/sql/sql-date-functions.mdx).
+With dates, you will frequently want to use a bit more complex structure for the comparison to work correctly. In this case, we are converting the `DateJoined` value to a simple date (day, month, year without the time). We are also getting a current date in UTC format and converting it to a simple date. Next, we subtract one month and compare it to the `DateJoined` transformed value. I cover more such examples in the [SFMC SQL Date Functions](/docs/salesforce/marketing-cloud-engagement/sql/sql-date-functions.mdx).
 
 ## LIKE operator
 
