--- a/docs/salesforce/marketing-cloud-engagement/sql/snippets/sql-debugging-value-length.mdx
+++ b/docs/salesforce/marketing-cloud-engagement/sql/snippets/sql-debugging-value-length.mdx
@@ -76,7 +76,7 @@ In most cases, the field length of 255 should be more than enough. But if you ne
 
 4000 characters length is an instant way of getting over the recommended limit, but it might be useful for logging Data Extensions that you won't query in the future. For example, if you want to save [`_Bounce` Data View](/docs/salesforce/marketing-cloud-engagement/config/system-data-views.mdx#_bounce) to standard Data Extension, `SMTPBounceReason` might use such a long field.
 
-If you need more, there is a trick reported by [Markus Slabina](/docs/salesforce/marketing-cloud-engagement/sql/sql-conversion-functions.mdx#data-types) field that allows absurdly long data to be stored.
+If you need more, there is a trick reported by [Markus Slabina](https://salesforce.stackexchange.com/questions/154402/data-extension-maximum-characters-of-text-field/154403). Use Email Studio to add a new field and make the length empty. Save. It will create a [`nvarchar(max)`](/docs/salesforce/marketing-cloud-engagement/sql/sql-conversion-functions.mdx#data-types) field that allows absurdly long data to be stored.
 
 Remember that:
 
@@ -148,7 +148,7 @@ Previously shown query will show the problematic record, but it will display all
 
 However, we already are coding the expected field length in the [`FROM`](/docs/salesforce/marketing-cloud-engagement/sql/sql-from.mdx) part of the query. Why not use it to make life easier?
 
-Let's change the `LEN(/docs/salesforce/marketing-cloud-engagement/sql/sql-select.mdx) statement part to something a bit more interesting:
+Let's change the `LEN(c.Id) AS [Subscriber Key],` in the [`SELECT`](/docs/salesforce/marketing-cloud-engagement/sql/sql-select.mdx) statement part to something a bit more interesting:
 
 ```sql title="Use CASE to display only the problematic fields"
 CASE
