--- a/docs/salesforce/marketing-cloud-engagement/sql/sql-date-functions.mdx
+++ b/docs/salesforce/marketing-cloud-engagement/sql/sql-date-functions.mdx
@@ -384,7 +384,7 @@ The `FORMAT` works only with datetime and numeric values, outputs a string and r
 2. Format specifier to be applied
 3. Optionally - ISO culture code
 
-It is a perfect tool to manipulate any dates (/docs/salesforce/marketing-cloud-engagement/sql/sql-conversion-functions.mdx)) available in your Data Extensions. For personalization. For comparison between system and imported dates outside of the query. For preparing data to export it to an external system with specific format requirements.
+It is a perfect tool to manipulate any dates (or date-like strings with the help of [conversion](/docs/salesforce/marketing-cloud-engagement/sql/sql-conversion-functions.mdx)) available in your Data Extensions. For personalization. For comparison between system and imported dates outside of the query. For preparing data to export it to an external system with specific format requirements.
 
 ```sql title="Instead of creating complex AMPScript logic to adapt dates, format them"
 SELECT
