--- a/docs/salesforce/marketing-cloud-engagement/sql/sql-join.mdx
+++ b/docs/salesforce/marketing-cloud-engagement/sql/sql-join.mdx
@@ -16,7 +16,7 @@ import innerLeftJoinReversed from '/static/img/article/article-image-sql-join-in
 
 <LeadText content='Data Extensions. System Data Views. With the JOIN statement, use one query to rule them all.' />
 
-There are cases where all you need is to pull (/docs/salesforce/marketing-cloud-engagement/sql/sql-from.mdx) a single Data Extension. But the real magic of SQL is visible when you need to combine information from multiple data points. Here comes the `JOIN` statement.
+There are cases where all you need is to pull (and maybe transform) data [`FROM`](/docs/salesforce/marketing-cloud-engagement/sql/sql-from.mdx) a single Data Extension. But the real magic of SQL is visible when you need to combine information from multiple data points. Here comes the `JOIN` statement.
 
 ```sql {6-7} title="Check who opened the email and when by querying the _Open System Data View"
 SELECT
@@ -455,7 +455,7 @@ As with [`UNION`](#union), `INTERSECT` works only if:
 
 The check for rows existing in both queries is done considering data in all provided columns.
 
-You can have the same outcome with more control over comparison logic with a mix of [`JOIN`](/docs/salesforce/marketing-cloud-engagement/sql/sql-where.mdx).
+You can have the same outcome with more control over comparison logic with a mix of [`JOIN`](#join-types) and [`WHERE`](/docs/salesforce/marketing-cloud-engagement/sql/sql-where.mdx).
 
 ## EXCEPT
 
@@ -479,7 +479,7 @@ As with [`UNION`](#union), `EXCEPT` works only if:
 
 The check for rows existing in both queries is done considering data in all provided columns.
 
-You can have the same outcome with more control over comparison logic with a mix of [`JOIN`](/docs/salesforce/marketing-cloud-engagement/sql/sql-where.mdx).
+You can have the same outcome with more control over comparison logic with a mix of [`JOIN`](#join-types) and [`WHERE`](/docs/salesforce/marketing-cloud-engagement/sql/sql-where.mdx).
 
 ## SFMC SQL JOIN Cheat Sheet
 
