--- a/docs/salesforce/marketing-cloud-engagement/sql/sql-select.mdx
+++ b/docs/salesforce/marketing-cloud-engagement/sql/sql-select.mdx
@@ -146,11 +146,11 @@ ORDER BY CONVERT(INT, QuizScore) DESC
 
 For example, it will be needed when you `ORDER BY` [`COUNT`](/docs/salesforce/marketing-cloud-engagement/sql/sql-aggregate-functions.mdx#count) within [`GROUP BY`](/docs/salesforce/marketing-cloud-engagement/sql/sql-aggregate-functions.mdx#group-by).
 
-`ORDER BY` will also sort dates in Marketing Cloud alphabetically using month(/docs/salesforce/marketing-cloud-engagement/sql/sql-conversion-functions.mdx#convert) to `DATE` (if you to order only by date) or `DATETIME2` (if time is important for ordering as well), just as in previous example.
+`ORDER BY` will also sort dates in Marketing Cloud alphabetically using month (start with `Apr`, follow up with `Aug` and so on). You can fix it by using [`CONVERT`](/docs/salesforce/marketing-cloud-engagement/sql/sql-conversion-functions.mdx#convert) to `DATE` (if you to order only by date) or `DATETIME2` (if time is important for ordering as well), just as in previous example.
 
 :::
 
-`ORDER BY` can operate not only on the selected column. You already saw above that you can use expression (/docs/salesforce/marketing-cloud-engagement/sql/sql-case.mdx#conditional-values-with-case)!) to calculate the sorting value, but it's much more flexible.
+`ORDER BY` can operate not only on the selected column. You already saw above that you can use expression (even [`CASE`](/docs/salesforce/marketing-cloud-engagement/sql/sql-case.mdx#conditional-values-with-case)!) to calculate the sorting value, but it's much more flexible.
 
 You can sort using a column not picked in `SELECT`:
 
@@ -291,4 +291,4 @@ Despite official [SFMC SQL documentation](https://help.salesforce.com/articleVie
 
 Unfortunately, SFMC SQL does not support variables.
 
-Fortunately, it does support (/docs/salesforce/marketing-cloud-engagement/sql/sql-string-functions.mdx), [Dates](/docs/salesforce/marketing-cloud-engagement/sql/sql-date-functions.mdx), [Numbers](/docs/salesforce/marketing-cloud-engagement/sql/sql-numeric-functions.mdx), [Conversion](/docs/salesforce/marketing-cloud-engagement/sql/sql-conversion-functions.mdx), [Aggregation](/docs/salesforce/marketing-cloud-engagement/sql/sql-aggregate-functions.mdx), [`CASE`](/docs/salesforce/marketing-cloud-engagement/sql/sql-case.mdx) and [`LIKE`](/docs/salesforce/marketing-cloud-engagement/sql/sql-like.mdx).
+Fortunately, it does support (selected) functions. Learn more about them in SFMC SQL Functions documentation pages related to [Strings](/docs/salesforce/marketing-cloud-engagement/sql/sql-string-functions.mdx), [Dates](/docs/salesforce/marketing-cloud-engagement/sql/sql-date-functions.mdx), [Numbers](/docs/salesforce/marketing-cloud-engagement/sql/sql-numeric-functions.mdx), [Conversion](/docs/salesforce/marketing-cloud-engagement/sql/sql-conversion-functions.mdx), [Aggregation](/docs/salesforce/marketing-cloud-engagement/sql/sql-aggregate-functions.mdx), [`CASE`](/docs/salesforce/marketing-cloud-engagement/sql/sql-case.mdx) and [`LIKE`](/docs/salesforce/marketing-cloud-engagement/sql/sql-like.mdx).
