--- a/sites/ideas/salesforce/marketing-cloud-engagement-ideas.mdx
+++ b/sites/ideas/salesforce/marketing-cloud-engagement-ideas.mdx
@@ -297,3 +297,19 @@ Currently, there is no real workaround apart from:
     text='Vote on IdeaExchange'
     newTab='true'
 />
+
+### Increase Licence Limits with Additional Business Units
+
+Salesforce Marketing Cloud's Business Unit structure is essential for organising marketing operations across different brands, regions, or teams. However, its effectiveness is severely undermined by the current licence model, where key limits are shared across all Business Units. This creates a critical bottleneck, especially for Yearly Automation Executions, where a single active BU can consume the entire enterprise-wide allowance, crippling all other BUs.
+
+The most painful licence limit is Yearly Automation Executions. Why is it so painful? Because the threshold is absurdly small for real-life usage. An Enterprise licence provides 100K yearly executions. A single automation running every hour uses 8,760 executions per year. This means an entire enterprise can only support roughly 11 hourly automations in total before hitting the limit. And for multi-BU setups that use Multi-Org Marketing Cloud Connect integration, it's a killer.
+
+Salesforce can solve this: for each new Business Unit purchased, automatically increase enterprise limits (e.g., +45,000 Automation Executions, +6M API Calls, +45GB DE Storage, +45K Contacts, +45 Users).
+
+Bonus Solution: Create a Limit Allocation Manager in Setup. This would be a new administrative UI allowing an enterprise admin to view the total org limits and allocate portions to each Business Unit. For example, an admin could assign 60% of the Automation Execution limit to the Parent BU and 10% to four smaller regional BUs. This provides ultimate governance and prevents a single runaway process in one BU from impacting the entire organisation.
+
+<Button
+    link='https://ideas.salesforce.com/s/idea/a0BHp000016LlDJMA0/increase-licence-limits-with-additional-business-units'
+    text='Vote on IdeaExchange'
+    newTab='true'
+/>
